--- a/docs/modules/chains/chat_vector_db.ipynb
+++ b/docs/modules/chains/chat_vector_db.ipynb
@@ -6,11 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eve.chains import ChatVectorDBChain\n",
-    "from eve.chat_models import ChatZhiPuAI\n",
-    "from eve.vectorstores import FAISS\n",
-    "from eve.embeddings import HuggingFaceEmbeddings\n",
-    "from eve.schema import Document"
+    "from lib.chains import ChatVectorDBChain\n",
+    "from lib.chat_models import ChatZhiPuAI\n",
+    "from lib.vectorstores import FAISS\n",
+    "from lib.embeddings import HuggingFaceEmbeddings\n",
+    "from lib.schema import Document"
    ]
   },
   {
@@ -22,7 +22,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\AppHome\\anaconda3\\envs\\lcl\\eve\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:13: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
+      "d:\\AppHome\\anaconda3\\envs\\lcl\\lib\\site-packages\\sentence_transformers\\cross_encoder\\CrossEncoder.py:13: TqdmExperimentalWarning: Using `tqdm.autonotebook.tqdm` in notebook mode. Use `tqdm.tqdm` instead to force console mode (e.g. in jupyter console)\n",
       "  from tqdm.autonotebook import tqdm, trange\n"
      ]
     },
