--- a/docs/modules/chains/combine_documents.ipynb
+++ b/docs/modules/chains/combine_documents.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eve.prompts.prompt import PromptTemplate\n",
-    "from eve.schema import Document\n",
-    "from eve.chains import LLMChain, StuffDocumentsChain\n",
-    "from eve.chat_models import ChatZhiPuAI"
+    "from lib.prompts.prompt import PromptTemplate\n",
+    "from lib.schema import Document\n",
+    "from lib.chains import LLMChain, StuffDocumentsChain\n",
+    "from lib.chat_models import ChatZhiPuAI"
    ]
   },
   {
