--- a/docs/modules/document_loader/document_loader.ipynb
+++ b/docs/modules/document_loader/document_loader.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eve.document_loaders import UnstructuredFileLoader\n",
+    "from lib.document_loaders import UnstructuredFileLoader\n",
     "loader = UnstructuredFileLoader(file_path=\"../sources/ai_latex_trans_arxiv_2201.11903.pdf\", mode=\"single\")\n",
     "loader.load()\n"
    ]
@@ -35,7 +35,7 @@
     }
    ],
    "source": [
-    "from eve.document_loaders import TextLoader\n",
+    "from lib.document_loaders import TextLoader\n",
     "loader = TextLoader(file_path=\"../sources/state_of_artifical.txt\")\n",
     "loader.load()"
    ]
