--- a/docs/modules/memory/adding_memory.ipynb
+++ b/docs/modules/memory/adding_memory.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from eve.llms import ZhiPuAI\n",
-    "from eve.chains import LLMChain\n",
-    "from eve.memory import ConversationBufferMemory\n",
-    "from eve.prompts import PromptTemplate"
+    "from lib.llms import ZhiPuAI\n",
+    "from lib.chains import LLMChain\n",
+    "from lib.memory import ConversationBufferMemory\n",
+    "from lib.prompts import PromptTemplate"
    ]
   },
   {
@@ -18,12 +18,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "template = \"\"\"我是jin, 你是我的朋友eve，正在与我聊天\n",
+    "template = \"\"\"我是jin, 你是我的朋友lib，正在与我聊天\n",
     "{chat_history}\n",
     "jin: {input}\n",
-    "eve:\"\"\" \n",
+    "lib:\"\"\" \n",
     "prompt = PromptTemplate.from_template(template)\n",
-    "memory = ConversationBufferMemory(human_prefix=\"jin\", ai_prefix=\"eve\", memory_key=\"chat_history\")\n"
+    "memory = ConversationBufferMemory(human_prefix=\"jin\", ai_prefix=\"lib\", memory_key=\"chat_history\")\n"
    ]
   },
   {
@@ -57,7 +57,7 @@
     }
    ],
    "source": [
-    "llm_chain.run(input=\"你好，eve\")"
+    "llm_chain.run(input=\"你好，lib\")"
    ]
   },
   {
